tests/negative/neg_imported_object_subcomponent_assignment.safe
-- Test: neg_imported_object_subcomponent_assignment
-- Description: Imported package-qualified object subcomponents remain read-only in PR08.3.
-- Expected: REJECT unsupported_source_construct

with provider_Record_Object;

package imported_Object_Subcomponent_Assignment_Test

   task Writer

      loop
         provider_Record_Object.state.value = 4;



